--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -14,7 +14,7 @@ google_analytics_id = ""
 google_tag_manager_id = ""
 
   [params.logo]
-  standard = "images/signalfox-logo.png"
+  standard = "images/signalfox-logo.svg"
   mobile = "images/spearfish-logo2.png"
   alt = "signalfox logo"
 
